[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Asteroids"
version = "0.1.0" # Alpha version
authors = [
  { name="Brittany Gates", email="bcgates82@gmail.com" },
]
description = "A classic arcade-style Asteroids game built with Python and PyGame."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Arcade",
]

# Add your project's dependencies here
dependencies = [
    "pygame>=2.6.1",
]

[project.urls]
"Homepage" = "https://github.com/BrittanyGates/Asteroids"
"Bug Tracker" = "https://github.com/BrittanyGates/Asteroids/issues"
